# Tso

./: .env.example  .gitignore  CLAUDE.md  INSTALL_v3.md  README.md  README_GAME.md  cli.py  config.py  example_questions_chinese.txt  example_questions_choice.txt  example_questions_english.txt  example_questions_math.txt  index.html  minecraft_quiz.py  pyproject.toml  tso-ky-habits.md
.github/workflows/: deploy.yml
agent/: core.py  sandbox.py  tool_search.py
chess-app/: index.html  package-lock.json  vite.config.ts
chess-app/src/: App.tsx  index.css
chess-app/src/chess/: ai.ts  board.ts  moves.ts
chess-app/src/components/chess/: ChessBoard.css  ChessGame.css  ChessGame.tsx  Sidebar.css  Sidebar.tsx
chess-app/src/components/kidibot/: levels.ts  (+2 more)
chess-app/src/pages/: ChessPage.tsx  Home.css  Home.tsx  MinecraftQuiz.tsx
css/: style.css
docs/: index.html
js/: lessons.js  main.js
mcp_server/: elicitation.py  protocol.py  registry.py  server.py
mcp_server/auth/: __init__.py  cimd.py  vaults.py
tools/: __init__.py  file_ops.py  system_ops.py  web_ops.py
tso-games/: index.html  package-lock.json  package.json  vite.config.ts
tso-games/public/minecraft-quiz/: index.html
tso-games/src/: App.tsx
tso-games/src/chess/: ai.worker.ts  board.ts  endgames.ts  notation.ts  save.ts  types.ts
tso-games/src/pages/: BattleshipPage.css  BattleshipPage.tsx  ChessPage.css  EndgamePage.css  EndgamePage.tsx  Home.css  Home.tsx  KidibotPage.css  KidibotPage.tsx  MathQuestPage.tsx  MinecraftQuiz.css  MinecraftQuiz.tsx  ThreeKingdomsPage.css  ThreeKingdomsPage.tsx
(+24 files in other folders)
